// Original file: proto/index.proto

import type { TodoRequest as _indexPackage_TodoRequest, TodoRequest__Output as _indexPackage_TodoRequest__Output } from '../indexPackage/TodoRequest';

export interface TodoResponse {
  'todos'?: (_indexPackage_TodoRequest)[];
}

export interface TodoResponse__Output {
  'todos'?: (_indexPackage_TodoRequest__Output)[];
}
